--- a/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
+++ b/M05_estructuradedatos/Prep_Course_Homework_05.ipynb
@@ -18,10 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ciudades = [\"Buenos Aires\", \"Roma\", \"Atenas\", \"Esparta\", \"Rio\"]"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Buenos Aires', 'Roma', 'Atenas', 'Esparta', 'Rio']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Roma', 'Atenas', 'Esparta']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades[1:4])"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(Ciudades))"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Atenas', 'Esparta', 'Rio']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades[2:])"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Buenos Aires', 'Roma', 'Atenas', 'Esparta']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades[0:4])"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +160,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Buenos Aires', 'Roma', 'Atenas', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ciudades.extend([\"Madrid\", \"Buenos Aires\"])\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Buenos Aires', 'Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ciudades.insert(3, \"Chaco\")\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +212,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los paises son: ['Argentina', 'Grecia', 'Italia']\n",
+      "['Buenos Aires', 'Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'Italia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Paises = [\"Argentina\", \"Grecia\", \"Italia\"]\n",
+    "print(\"Los paises son: \" + str(Paises))\n",
+    "Ciudades.extend(Paises)\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades.index(\"Buenos Aires\"))"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'Colombia' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mCiudades\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mColombia\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Colombia' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades.index(\"Colombia\"))"
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +295,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'Italia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ciudades.remove(\"Buenos Aires\")\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +321,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[46], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mCiudades\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mBrasil\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(Ciudades)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "Ciudades.remove(\"Brasil\")\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Italia\n"
+     ]
+    }
+   ],
+   "source": [
+    "Ultimo = Ciudades.pop()\n",
+    "print(Ultimo)"
+   ]
   },
   {
    "attachments": {},
@@ -228,10 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4*Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -243,10 +402,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tupla = (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n",
+    "print(Tupla)\n",
+    "print(type(Tupla))"
+   ]
   },
   {
    "attachments": {},
@@ -258,10 +430,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Tupla[10:16])"
+   ]
   },
   {
    "attachments": {},
@@ -273,10 +455,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 in Tupla)\n",
+    "print(30 in Tupla)"
+   ]
   },
   {
    "attachments": {},
@@ -288,10 +482,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "París ya se encontraba en la lista\n",
+      "['Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires', 'Argentina', 'Grecia', 'París']\n"
+     ]
+    }
+   ],
+   "source": [
+    "Condicion = \"París\" in Ciudades\n",
+    "if Condicion is False: \n",
+    "    Ciudades.append(\"París\")\n",
+    "else:\n",
+    "    print(\"París ya se encontraba en la lista\")\n",
+    "\n",
+    "print(Ciudades)"
+   ]
   },
   {
    "attachments": {},
@@ -303,10 +514,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Ciudades.count(\"Buenos Aires\"))\n",
+    "print(Tupla.count(5))"
+   ]
   },
   {
    "attachments": {},
@@ -318,10 +541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lista2 = list(Tupla)\n",
+    "print(Lista2)"
+   ]
   },
   {
    "attachments": {},
@@ -333,10 +567,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c = Tupla[0:3]\n",
+    "print(a,b,c)"
+   ]
   },
   {
    "attachments": {},
@@ -348,10 +593,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ciudad': ['Roma', 'Atenas', 'Chaco', 'Esparta', 'Rio', 'Madrid', 'Buenos Aires'], 'Pais': ['Argentina', 'Grecia', 'París']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Diccionario = {'Ciudad': Ciudades[0:7],\n",
+    "               'Pais': Ciudades[7:]}\n",
+    "print(Diccionario)"
+   ]
   },
   {
    "attachments": {},
@@ -363,10 +620,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Ciudad', 'Pais'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Diccionario.keys())"
+   ]
   },
   {
    "attachments": {},
@@ -378,10 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Argentina', 'Grecia', 'París']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Diccionario['Pais'])"
+   ]
   }
  ],
  "metadata": {
@@ -403,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
