--- a/M07_funciones/Prep_Course_Homework_07.ipynb
+++ b/M07_funciones/Prep_Course_Homework_07.ipynb
@@ -18,10 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Primo(x):\n",
+    "    Valor = True\n",
+    "    for i in range(2, x):\n",
+    "        if x%i == 0:\n",
+    "            Valor = False\n",
+    "            break\n",
+    "    return Valor\n",
+    "\n",
+    "\n",
+    "Primo(18)\n"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 11, 17]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Nros = [5, 8, 11, 15, 17, 18]\n",
+    "def Lista(y):\n",
+    "    Primos = []\n",
+    "    for i in y:\n",
+    "        if Primo(i) is True:\n",
+    "            Primos.append(i)\n",
+    "        else: \n",
+    "            continue\n",
+    "    return(Primos)\n",
+    "\n",
+    "Lista(Nros)\n"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +93,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('El valor ', 15, ' Se repite ', 1, ' Veces.')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Valores = [11, 15, 49, 41, 11, 54, 11, 26, 15]\n",
+    "\n",
+    "def repetido(n):\n",
+    "    for i in n: \n",
+    "        Lista_unicos = []\n",
+    "        Lista_repetidos = []\n",
+    "        if i in Lista_unicos: \n",
+    "            indice = Lista_unicos.index(i)\n",
+    "            Lista_repetidos[i] += 1\n",
+    "        else: \n",
+    "            Lista_unicos.append(i)\n",
+    "            Lista_repetidos.append(1)\n",
+    "    Moda = Lista_unicos[0]\n",
+    "    Maximo = Lista_repetidos[0]\n",
+    "    for elemento, i in enumerate(Lista_unicos):\n",
+    "        if Lista_repetidos[elemento] > Maximo:\n",
+    "            Moda = Lista_unicos[elemento]\n",
+    "            Maximo = Lista_repetidos[elemento]\n",
+    "    return \"El valor \", Moda, \" Se repite \", Maximo, \" Veces.\"\n",
+    "\n",
+    "repetido(Valores)\n",
+    "\n",
+    "        \n",
+    "            \n"
+   ]
   },
   {
    "attachments": {},
@@ -121,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
